# triangle3D

./: CMakeLists.txt  README.md  plane.hpp
Vulkan/: CMakeLists.txt
Vulkan/include/: first_app.hpp  keyboard_movement_controller.hpp  lve_camera.hpp  lve_game_object.hpp  lve_model.hpp  lve_pipeline.hpp  lve_renderer.hpp  lve_swap_chain.hpp  lve_window.hpp  simple_render_system.hpp
Vulkan/shaders/: simple_shader.vert
Vulkan/source/: CMakeLists.txt  first_app.cpp  keyboard_movement_controller.cpp  lve_camera.cpp  lve_device.cpp  lve_game_object.cpp  lve_model.cpp  lve_pipeline.cpp  lve_renderer.cpp  lve_swap_chain.cpp  lve_window.cpp  main.cpp  simple_render_system.cpp
apps/: CMakeLists.txt
apps/AABB_triangle_comparison_run/: AABB_triangle_comparison_run.cpp
apps/BSP_triangle_comparison_run/: BSP_triangle_comparison_run.cpp
apps/apps/AABB_triangle_comparison_run/: AABB_triangle_comparison_run.cpp  CMakeLists.txt
apps/apps/BSP_triangle_comparison_run/: CMakeLists.txt
apps/apps/simplest_triangle_comparison_run/: CMakeLists.txt  simplest_triangle_comparison_run.cpp
apps/simplest_triangle_comparison_run/: simplest_triangle_comparison_run.cpp
apps/visualization_run/: CMakeLists.txt  visualization_run.cpp
gen-test/: CMakeLists.txt  generator.cpp
include/AABB/: AABB.hpp
include/BSP_tree/: BSP_tree.hpp
include/Triangle_intersection_algorithm/: Triangle_intersection_algorithm.hpp
include/common_math_operations/: common_math_operations.hpp
include/computational_algorithms/: computational_algorithms.hpp
include/line/: line.hpp
include/line_segment/: line_segment.hpp
include/plane/: plane.hpp
include/point/: point.hpp
include/triangle/: triangle.hpp
include/vector/: vector.hpp
include/vector_geom/: vector_geom.hpp
source/: CMakeLists.txt
source/AABB/: AABB.cpp  CMakeLists.txt
source/BSP_tree/: BSP_tree.cpp  CMakeLists.txt
source/Triangle_intersection_algorithm/: CMakeLists.txt  Triangle_intersection_algorithm.cpp
source/computational_algorithms/: CMakeLists.txt  computational_algorithms.cpp
source/line/: CMakeLists.txt  line.cpp
source/line_segment/: CMakeLists.txt  line_segment.cpp
source/plane/: CMakeLists.txt  plane.cpp
source/point/: CMakeLists.txt  point.cpp
source/triangle/: CMakeLists.txt  triangle.cpp
source/vector/: vector.cpp
source/vector_geom/: CMakeLists.txt  vector_geom.cpp
tests/: CMakeLists.txt
tests/algorithm_test/: CMakeLists.txt
tests/algorithm_test/2D_algorithm_test/: 2D_algorithm_test.cpp  CMakeLists.txt
tests/algorithm_test/degeneration_test/: CMakeLists.txt  degeneration_test.cpp
tests/algorithm_test/main_algorithm_test/: CMakeLists.txt  main_algorithm_test.cpp
tests/algorithm_test/service_functions_test/: CMakeLists.txt  service_functions_test.cpp
tests/class_test/: CMakeLists.txt
tests/class_test/AABB_functions_test/: AABB_functions_test.cpp  CMakeLists.txt
tests/class_test/line_functions_test/: CMakeLists.txt  line_functions_test.cpp
tests/class_test/line_segment_functions_test/: CMakeLists.txt  line_segment_functions_test.cpp
tests/class_test/plane_functions_test/: CMakeLists.txt  plane_functions_test.cpp
tests/class_test/point_functions_test/: CMakeLists.txt  point_functions_test.cpp
tests/class_test/triangle_functions_test/: CMakeLists.txt  triangle_functions_test.cpp
tests/class_test/vector_functions_test/: CMakeLists.txt  vector_functions_test.cpp
tests/class_test/vector_geom_functions_test/: CMakeLists.txt  vector_geom_functions_test.cpp
tests/common_test/: CMakeLists.txt  common_test.cpp
tests/vector_functions_test/: vector_functions_test.cpp
